[gd_scene load_steps=3 format=3 uid="uid://o5nbxlwy81fu"]

[ext_resource type="Script" path="res://wrsm/region_changer/RegionChanger.gd" id="1_b1kr7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6ldu"]
size = Vector2(16, 16)

[node name="RegionChanger" type="Node2D"]
script = ExtResource("1_b1kr7")

[node name="Texture" type="Sprite2D" parent="."]

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
metadata/_edit_lock_ = true

[node name="CollisionShape2d" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_m6ldu")
metadata/_edit_lock_ = true

[node name="PlayerSpawnPositionsContainer" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="PlayerSpawnPosition_N" type="Marker2D" parent="PlayerSpawnPositionsContainer"]
position = Vector2(8, -24)
metadata/_edit_lock_ = true

[node name="PlayerSpawnPosition_S" type="Marker2D" parent="PlayerSpawnPositionsContainer"]
position = Vector2(8, 8)
metadata/_edit_lock_ = true

[node name="PlayerSpawnPosition_E" type="Marker2D" parent="PlayerSpawnPositionsContainer"]
position = Vector2(24, -8)
metadata/_edit_lock_ = true

[node name="PlayerSpawnPosition_W" type="Marker2D" parent="PlayerSpawnPositionsContainer"]
position = Vector2(-8, -8)
metadata/_edit_lock_ = true

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
